# gti-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py  verify.sh
.github/workflows/: deploy-docs.yml  publish-packages.yml
gti_mcp_server/: server.py
tests/: conftest.py  test_collections_errors.py  test_files_errors.py  test_tools.py  test_utils.py
